objects/agf__ADM_Work__c.object
<CustomObject>
    <fields>
        <fullName>agf__ftest__c</fullName>
        <inlineHelpText>Document the name of the automated test to prevent this bug happenning again.</inlineHelpText>
        <label>test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__of_Test_Failures__c</fullName>
        <label>Test Failures Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__visual_link_num_of_Test_Failures__c</fullName>
        <formula>HYPERLINK(&quot;https://build2.soma.salesforce.com/luna2/bughandlerreport.faces?workid=&quot;&amp; Name , TEXT(BLANKVALUE(agf__of_Test_Failures__c, 0)) , &quot;new&quot;)</formula>
        <inlineHelpText>The number of test failures associated with this record, updated hourly. Clicking on the number redirects to a report with real-time data, which also shows the fixed test failures associated with the record.</inlineHelpText>
        <label>Test Failures</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Work</label>
    <listViews>
        <fullName>All_SP2_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>agf__Assignee__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Sprint_Name__c</field>
            <operation>equals</operation>
            <value>2017.01a</value>
        </filters>
        <filters>
            <field>agf__Type__c</field>
            <operation>equals</operation>
            <value>User Story</value>
        </filters>
        <label>All SP2 User Stories</label>
    </listViews>
    <listViews>
        <fullName>Integration_User_Stories</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>agf__Sprint_Name__c</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>MDM-2-SFDC</value>
        </filters>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>INT-</value>
        </filters>
        <label>Integration User Stories</label>
    </listViews>
    <listViews>
        <fullName>Inversiones_AP</fullName>
        <booleanFilter>1 AND (2 or 3 or 4) AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Priority__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>agf__Created_On_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Inversi</value>
        </filters>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>- AP</value>
        </filters>
        <filters>
            <field>agf__Subject__c</field>
            <operation>equals</operation>
            <value>. Altos</value>
        </filters>
        <filters>
            <field>agf__Product_Owner__c</field>
            <operation>equals</operation>
            <value>Mauricio De La Maza</value>
        </filters>
        <filters>
            <field>agf__Type__c</field>
            <operation>notEqual</operation>
            <value>Bug</value>
        </filters>
        <filters>
            <field>agf__Product_Owner__c</field>
            <operation>notEqual</operation>
            <value>Eugenio Marfán</value>
        </filters>
        <label>Inversiones AP</label>
    </listViews>
    <listViews>
        <fullName>Sales_Force_Process</fullName>
        <columns>NAME</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>agf__Epic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Sales Force</value>
        </filters>
        <label>Sales Force Process</label>
        <sharedTo>
            <group>Gerencia_Producto_Banca_Personas</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Sales User Stories</label>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories_Investment_Banking</fullName>
        <columns>NAME</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Priority__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>agf__Created_On_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Inversi</value>
        </filters>
        <label>Sales User Stories Investment Banking</label>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories_Lead_Management</fullName>
        <columns>NAME</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Priority__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Lead</value>
        </filters>
        <label>Sales User Stories Lead Management</label>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories_Midmarket_and_Corp</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Priority__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>agf__Additional_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Empresas</value>
        </filters>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Corp</value>
        </filters>
        <label>Sales User Stories Midmarket and Corp</label>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories_Oportunidades</fullName>
        <columns>NAME</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>oport</value>
        </filters>
        <label>Sales User Stories Oportunidades</label>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories_Retail_Banking</fullName>
        <columns>NAME</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Priority__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Retail</value>
        </filters>
        <label>Sales User Stories Retail Banking</label>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories_Retail_Banking_Lead</fullName>
        <columns>NAME</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Priority__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Lead</value>
        </filters>
        <label>Sales User Stories Retail Banking Lead</label>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories_SP1</fullName>
        <columns>NAME</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Sprint__c</field>
            <operation>equals</operation>
            <value>2016.12a</value>
        </filters>
        <label>Sales User Stories SP1</label>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories_SP2_CHS</fullName>
        <columns>NAME</columns>
        <columns>agf__Type__c</columns>
        <columns>agf__Story_Points__c</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Assignee__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Sprint_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Sprint__c</field>
            <operation>equals</operation>
            <value>2017.01a</value>
        </filters>
        <label>Sales User Stories SP2-</label>
    </listViews>
    <listViews>
        <fullName>User_Stories_Marketing</fullName>
        <columns>NAME</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>agf__Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Market</value>
        </filters>
        <label>User Stories Marketing</label>
    </listViews>
    <listViews>
        <fullName>User_Stories_Marketing_SP1_SP2</fullName>
        <columns>NAME</columns>
        <columns>agf__Epic__c</columns>
        <columns>agf__Subject__c</columns>
        <columns>agf__Details__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Story_Status__c</columns>
        <columns>agf__Product_Tag__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>agf__Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Subject__c</field>
            <operation>contains</operation>
            <value>Market</value>
        </filters>
        <filters>
            <field>agf__Sprint__c</field>
            <operation>contains</operation>
            <value>2017.01a,2016.12a</value>
        </filters>
        <label>User Stories Marketing SP1 SP2</label>
    </listViews>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work</pluralLabel>
    <recordTypes>
        <fullName>agf__Bug</fullName>
        <active>true</active>
        <description>Used to track defects or problems</description>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Investigation</fullName>
        <active>true</active>
        <description>Used to request R&amp;D triage/diagnosis support for a customer support escalation</description>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Template</fullName>
        <active>true</active>
        <description>Used to store common values which can then be applied to new Bugs</description>
        <label>Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__ToDo</fullName>
        <active>true</active>
        <description>Used to track a unit of work that does not need to have anything checked into Source Control nor does it need to have auto assignment rules applied</description>
        <label>ToDo</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__User_Story</fullName>
        <active>true</active>
        <description>Used to create feature requests. You are able to check in code against the user story record.</description>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Scheduled_Build_Not_Blank_P4_Status_Chng</fullName>
        <active>true</active>
        <description>Setting the P4 status to something other than --None-- requires that a scheduled build has been entered as well.</description>
        <errorConditionFormula>AND( ISBLANK( agf__Scheduled_Build__c ) ,CONTAINS(TEXT( agf__Perforce_Status__c ), &apos;Open&apos;))</errorConditionFormula>
        <errorMessage>Enter a valid scheduled build when setting the Source Control Status to Open or Open Once.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateAssigneeOnPeforceStatusOpen</fullName>
        <active>true</active>
        <description>Make sure there is an assignee designated if the source control status is changed to either open or open once.</description>
        <errorConditionFormula>AND(CASE( agf__Perforce_Status__c,
     &quot;Approved - Open&quot;, 1,
     &quot;Approved - Open Once&quot;, 1,
     0) = 1,agf__Assignee__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__Perforce_Status__c</errorDisplayField>
        <errorMessage>An assignee must be specified if the source control status is changed to Approved - Open or Approved - Open Once</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateQAEngineerWithStatus</fullName>
        <active>true</active>
        <description>QA Engineer field should be populated with Status is set to fixed</description>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Fixed&quot;, 1,
0) = 1, agf__QA_Engineer__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__QA_Engineer__c</errorDisplayField>
        <errorMessage>A QA Engineer must be specified if the Status is set to Fixed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateResolvedByWithStatus</fullName>
        <active>false</active>
        <description>Resolved_By__c field should not be populated if the Status indicates the the work record is still unresolved</description>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;New&quot;, 1,
&quot;In Progress&quot;, 1,
0) = 1, agf__Resolved_By__c != &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please update the Status__c field to something other than New or In Progress before populating the Resolved_By__c field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateScheduledBuildWithStatus</fullName>
        <active>false</active>
        <description>Scheduled Build field should be populated with Status is set to fixed</description>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Fixed&quot;, 1,
0) = 1, agf__Scheduled_Build__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__Scheduled_Build__c</errorDisplayField>
        <errorMessage>A Scheduled Build must be specified if the Status is set to Fixed</errorMessage>
    </validationRules>
</CustomObject>